Revision history for {{$dist->name}}

{{$NEXT}}
          Added a plugin infrastructure w/ Roles.
          Moved ->count to role composition ( you wont notice this )

0.02004206 2009-09-12 06:01:08 UTC
          Support for multiple-value commands ( Thanks James Laver )
          Support for ->count() mechanism     ( Thanks James Laver )

0.02003813 2009-09-08 13:10:54 UTC
          Clone Support works and tested.
          Clones are MX::Cloned, and deep.
          minor++ # version scheme incompatible
          dist.ini now shipping with dist
          DZIL CompileTests
          Versioning Scheme switched to AutoVersion::Relative
          Added MooseX::Clone support
          Added MooseX::Types Deps
          Added MooseX::Has::Sugar Deps
          Added more author tests
          Assload of Typos Fixed

0.0101    2009-08-22 10:09:57 UTC
          Fixed some build deps

0.0100    2009-08-21 16:24:40 UTC
          First version.
